# ai_movie_generator

./: .gitignore  Dockerfile  README.md  did_generator.py  docker-compose.yaml  env.example  image_magick_policy.xml  main.py  merge_img_and_subtitle_to_movie.py  openai_generator.py  pyproject.toml
.devcontainer/: devcontainer.json
sample_prompts/: english.txt
